ffdcintegrationrulesamples/src/objects/Work_Order_Line_Item__c.object
<CustomObject>
    <description>Detail Lines for Consulting Work Orders</description>
    <fields>
        <fullName>Hourly_Rate__c</fullName>
        <label>Hourly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Charged__c</fullName>
        <label>Hours Charged</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Value__c</fullName>
        <formula>Round( Hourly_Rate__c *  Hours_Charged__c , 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Work Order Line Items</relationshipLabel>
        <relationshipName>Work_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <label>Work Order</label>
        <referenceTo>Work_Order__c</referenceTo>
        <relationshipLabel>Work Order Line Items</relationshipLabel>
        <relationshipName>Work_Order_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Work Order Line Item</label>
    <nameField>
        <displayFormat>WOL{000000}</displayFormat>
        <label>Work Order Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>